genson-cli/tests/snapshots/map_encoding__cli_map_encoding_entries.snap
---
source: genson-cli/tests/map_encoding.rs
expression: parse_ndjson(&stdout_str)
---
[
  {
    "id": "A",
    "labels": [
      {
        "en": "Hello"
      },
      {
        "fr": "Bonjour"
      }
    ]
  }
]
