genson-cli/tests/snapshots/map_encoding__cli_wrap_root.snap
---
source: genson-cli/tests/map_encoding.rs
expression: parse_ndjson(&stdout_str)
---
[
  {
    "labels": [
      {
        "key": "en",
        "value": [
          {
            "key": "language",
            "value": "en"
          },
          {
            "key": "value",
            "value": "Hello"
          }
        ]
      },
      {
        "key": "fr",
        "value": [
          {
            "key": "language",
            "value": "fr"
          },
          {
            "key": "value",
            "value": "Bonjour"
          }
        ]
      }
    ]
  }
]
